# GD-BASIC

./: .gitattributes.swp  .gitignore  BASIC.md  CHANGELOG.md  Jenkinsfile  LICENSE.md  README.md  STYLEGUIDE.md  build.gradle  pom.xml  pom.xml.old  settings.gradle  ssh_copy
.github/workflow/: main.yml
config/checkstyle/: checkstyle.xml
doc/: BASIC.md  DeveloperDoc.md  Java22ComplianceGuide.md  OperatorPrecedenceImplementation.md  ParserDesign.md  PrecedenceExample.java  TechnicalDocumentation.md  UnaryOperatorExpressionDesign.md  While-Loop.graffle
doc/GD_Basic_Examples/: Eratosthenese.bas
doc/Jasic/: Basic.java
doc/graffle/: Do-Loop.graffle  LineNumberRelationship.graffle  Process Flow.graffle
doc/uml/: basic.uml  parser.uml
etc/: ErrorCodes.yml  Test.yml  checkstyle-config.xml
etc/VSCExtension/: .vsixmanifest  package.json
etc/VSCExtension/syntaxes/: basic.tmLanguage.json
etc/gd-basic/: Basic.yaml
src/main/c++/: CMakeLists.txt  gdbas-rtl-test.cpp  main.cpp
src/main/c++/memoryManager/: CMakeLists.txt  Stack.cpp
src/main/c++/memoryManager/include/: Stack.h  version.h.in
src/main/c++/util/: CMakeCache.txt  CMakeLists.txt  Logger.cpp  Makefile  SystemUtils.cpp  cmake_install.cmake  util.pc
src/main/c++/util/.cmake/api/v1/reply/: cache-v2-03c238a7a1d1640b2fbb.json  cache-v2-88690c8ef011ee841bc3.json  cache-v2-c18b5c3755d936a1eed5.json  cmakeFiles-v1-89895dbfb8c918213278.json  cmakeFiles-v1-8f9d1194611066ca2aee.json  cmakeFiles-v1-db84b41528a30491f048.json  codemodel-v2-4bbf1884537f0ba0ecb6.json  codemodel-v2-4e4ee9291fb32997d3d0.json  codemodel-v2-aeafe0f4e63d122b36fa.json  directory-.-Release-1dc4bdacc3a1ebc66282.json  index-2021-12-14T11-49-01-0846.json  index-2022-04-23T19-34-40-0693.json  index-2022-10-16T14-13-23-0521.json  target-util-Release-67b4cd31946e03fc02bf.json  target-util-Release-70212e6b90a72887a79e.json  target-util-Release-ebb4053a30982d41a215.json
src/main/c++/util/include/: Logger.h  SystemUtils.h
src/test/basic/: .test_basic_Q1_dev.json.swp  test_basic_Q1_dev.bas  test_basic_Q1_unittest_2.bas  test_basic_parser_unittest_2_add.bas  (+2 more)
src/test/c++/util/: CMakeCache.txt  CMakeLists.txt  TestSystemUtils.cpp  build.ninja  cmake_install.cmake
src/test/c++/util/.cmake/api/v1/reply/: cache-v2-036738b4f779671dbd12.json  cmakeFiles-v1-ecf6efee84ed127795fd.json  codemodel-v2-cbda83aacffa9157458d.json  index-2021-12-12T22-28-00-0066.json  target-TestSystemUtils-1430a8c4997bcd7e727a.json
src/test/resources/: testfile.bas  (+8 more)
(+376 files in other folders)
